# regional_meshgen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.ini
app/: CMakeLists.txt  main.cpp  regional_meshgen.cpp
include/: AbstractMesh.hpp  AbstractProjector.hpp  FileMesh.hpp  RegularMesh.hpp  StereographicProjector.hpp  helpers.hpp  point.hpp
libs/inipp/: inipp.h
libs/triangle/: CMakeLists.txt  triangle.c  triangle.h
python/: README.md  requirements.txt
python/viz/: plot_mesh.py
src/: .RegularMesh.cpp.swo  AbstractMesh.cpp  CMakeLists.txt  RegularMesh.cpp  StereographicProjector.cpp  helpers.cpp
src/lib/: AbstractMesh.hpp  AbstractProjector.hpp  StereographicProjector.cpp  StereographicProjector.hpp  mesh.hpp  point.hpp  projector.hpp  stereographicProjector.cpp  stereographicProjector.hpp
tests/: CMakeLists.txt  test_regular_mesh.cpp  test_stereographic_projector.cpp  tests.cpp
